United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6879921 CTW failure jdk6_18/hotspot/src/share/vm/utilities/globalDefinitions.cpp:268
6879921 : CTW failure jdk6_18/hotspot/src/share/vm/utilities/globalDefinitions.cpp:268

Details
Type:
Bug
Submit Date:
2009-09-08
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
linux,generic
Sub-Component:
compiler
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs16,6u21
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
The C2, looks that it is not platform specific.

To reproduce run:
/net/sqenfs-1.sfbay/export1/jdk/re/6u18/promoted/all/b01/binaries/solaris-sparc/fastdebug/bin/java -server -XX:-ShowMessageBoxOnError -Xverify:all  -XX:+CompileTheWorld  -Xbootclasspath/p:/net/sqenfs-1.sfbay/export1/comp/vm/testbase/ctw/build/../jars/ibiblio/maven2/annogen/annogen/0.1.0/annogen-0.1.0.jar

Output:

CompileTheWorld (129) : org/codehaus/jam/internal/elements/AnnotationValueImpl
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/globalDefinitions.cpp:268
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/BUILD_AREA/jdk6_18/hotspot/src/share/vm/utilities/globalDefinitions.cpp:268), pid=2896, tid=11
#  Error: assert(allow_address || t != T_ADDRESS," ")
#
# JRE version: 6.0_18-b01
# Java VM: Java HotSpot(TM) Server VM (16.0-b08-fastdebug mixed mode solaris-sparc )
# An error report file with more information is saved as:
# /tmp/hs_err_pid2896.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#
Current thread is 11
Dumping core ...
Abort

                                    

Comments
WORK AROUND

-XX:-UseSuperWord
                                     
2010-01-27
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/00977607da34
                                     
2009-09-15



Hardware and Software, Engineered to Work Together