6879921: CTW failure jdk6_18/hotspot/src/share/vm/utilities/globalDefinitions.cpp:268

Filter out non-primitives before deciding whether two ops can be packed

Reviewed-by: kvn, never